--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -1,7 +1,8 @@
-DIRETORIO_DOWNLOAD_FRONTEND=
-DIRETORIO_DOWNLOAD_BACKEND=
+DSPACE_NAME="DSpace Deposita"
+DSPACE_NAME_SINGLE_WORD="Deposita"
+
+DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita-4_2
 
 # DADOS DO POSTGRESQL
-POSTGRES_URL=
-POSTGRES_USUARIO=
-POSTGRES_SENHA=
+# Example: POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://USERNAME:PASSWORD@IP:PORT/DATABASENAME
+POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://dspace:dspace@192.169.5.126:5006/dspace
