Atualização dos arquivos

--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -4,5 +4,5 @@ DSPACE_NAME_SINGLE_WORD="Deposita"
 DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita-4_2
 
 # DADOS DO POSTGRESQL
-# Example: POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://USERNAME:PASSWORD@IP:PORT/DATABASENAME
-POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://dspace:dspace@192.169.5.126:5006/dspace
+# Example: POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://USERNAME:PASSWORD@NETWORK_IP:PORT/DATABASENAME
+POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://dspace:dspace@192.169.5.126:5005/dspace
