--- a/dockerfiles/docker-compose_migration.yml
+++ b/dockerfiles/docker-compose_migration.yml
@@ -14,8 +14,8 @@ services:
       # dspace.dir: Must match with Dockerfile's DSPACE_INSTALL directory.
       dspace__P__dir: /dspace
       # Uncomment to set a non-default value for dspace.server.url or dspace.ui.url
-      dspace__P__server__P__url: http://172.16.21.21:8080/server
-      dspace__P__ui__P__url: http://172.16.21.21:4000
+      dspace__P__server__P__url: http://localhost:8080/server
+      dspace__P__ui__P__url: http://localhost:4000
       dspace__P__name: 'Deposita'
       # db.url: Ensure we are using the 'dspacedb' image for our database
       db__P__url: 'jdbc:postgresql://host.docker.internal:5006/dspace'
@@ -40,8 +40,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
     # Keep DSpace assetstore directory between reboots
-    # Criar link simbólico
-    - ../dspace-install-dir:/dspace
+    - ../../dspace-install-dir:/dspace
     # Mount local [src]/dspace/config/ to container. This syncs your local configs with container
     # NOTE: Environment variables specified above will OVERRIDE any configs in local.cfg or dspace.cfg
 #    - ./dspace/config:/dspace/config
