Registro da evolução do trabalho (guardando)

--- a/dockerfiles/docker-compose_frontend.yml
+++ b/dockerfiles/docker-compose_frontend.yml
@@ -17,11 +17,11 @@ services:
     container_name: dspace-angular
     environment:
       DSPACE_UI_SSL: 'false'
-      DSPACE_UI_HOST: 'localhost'
+      DSPACE_UI_HOST: '192.169.5.126'
       DSPACE_UI_PORT: '4000'
       DSPACE_UI_NAMESPACE: /
       DSPACE_REST_SSL: 'false'
-      DSPACE_REST_HOST: 'host.docker.internal'
+      DSPACE_REST_HOST: '192.169.5.126'
       DSPACE_REST_PORT: '8080'
       DSPACE_REST_NAMESPACE: '/server'
     build:
@@ -32,8 +32,8 @@ services:
     ports:
     - published: 4000
       target: 4000
-    - published: 9876
-      target: 9876
+#    - published: 9876
+#      target: 9876
     stdin_open: true
     tty: true
     extra_hosts:
