--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -1,8 +1,19 @@
-DSPACE_NAME="DSpace Deposita"
-DSPACE_NAME_SINGLE_WORD="Deposita"
-
 DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita-4_2
 
-# DADOS DO POSTGRESQL
-# Example: POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://USERNAME:PASSWORD@NETWORK_IP:PORT/DATABASENAME
-POSTGRES_URL_WITHUSERNAME_AND_PASSWORD=postgresql://dspace:dspace@192.169.5.126:5005/dspace
+####
+## Configurações do Backend
+####
+BACKEND_PROTOCOL=http
+# Atenção a aplicação rodando no browser precisa conseguir acessar este endereço
+BACKEND_HOSTNAME=192.169.5.126
+BACKEND_PORT=8080
+BACKEND_USES_SSL=false
+
+####
+## Configurações do FrontEnd
+####
+FRONTEND_PROTOCOL=http
+FRONTEND_HOSTNAME=192.169.5.126
+# Atenção este endereço precisa ser acessível pelo browser
+FRONTEND_PORT=4000
+FRONTEND_USES_SSL=false
