--- a/dockerfiles/docker-compose_frontend.yml
+++ b/dockerfiles/docker-compose_frontend.yml
@@ -24,6 +24,7 @@ services:
       DSPACE_REST_HOST: '192.169.5.126'
       DSPACE_REST_PORT: '8080'
       DSPACE_REST_NAMESPACE: '/server'
+      NODE_OPTIONS: '--max-old-space-size=8192'
     build:
       context: ..
       dockerfile: Dockerfile
