--- a/dockerfiles/docker-compose_migration.yml
+++ b/dockerfiles/docker-compose_migration.yml
@@ -1,6 +1,5 @@
 version: '3.7'
-networks:
-  dspacenet:
+
 
 services:
 
@@ -17,7 +16,9 @@ services:
       - POSTGRES_PASSWORD=xxxxx #Postgres password
       - TZ=America/Sao_Paulo
     networks:
-      dspacenet:
+      - dspacenet
+#    volumes:
+#      -  ../../postgres-data:/var/lib/postgresql/data
 
   dspace:
     container_name: dspace
@@ -29,12 +30,10 @@ services:
       context: .
       dockerfile: Dockerfile
     networks:
-      dspacenet:
+      - dspacenet
     ports:
     - published: 8080 #Port for tomcat
       target: 8080
-#    - published: 8009
-#      target: 8009
     stdin_open: true
     tty: true
     extra_hosts:
@@ -42,13 +41,7 @@ services:
     volumes:
     # Keep DSpace assetstore directory between reboots
     - ../../dspace-install-dir:/dspace
-    # Mount local [src]/dspace/config/ to container. This syncs your local configs with container
-    # NOTE: Environment variables specified above will OVERRIDE any configs in local.cfg or dspace.cfg
-#    - ./dspace/config:/dspace/config
-    # Ensure that the database is ready BEFORE starting tomcat
-    # 1. While a TCP connection to dspacedb port 5432 is not available, continue to sleep
-    # 2. Then, run database migration to init database tables
-    # 3. Finally, start Tomcat
+    - m2:/root/.m2
     entrypoint:
     - /bin/bash
     - '-c'
@@ -76,7 +69,7 @@ services:
     # Uses official Solr image at https://hub.docker.com/_/solr/
     image: solr:8.11-slim
     networks:
-      dspacenet:
+      - dspacenet
 #    ports:
 #    - published: 8983
 #      target: 8983
@@ -111,3 +104,9 @@ services:
       exec solr -f
 volumes:
   solr_data:
+  m2:
+
+networks:
+  dspacenet:
+    name: dspacenet
+    driver: bridge
