--- a/local.cfg
+++ b/local.cfg
@@ -1,5 +1,6 @@
 dspace.name=Novo DSpace 7
 default.language = pt_BR
+webui.supported.locales = pt_BR
 mail.server = smtp.example.com
 mail.server.port = 25
 mail.from.address = dspace-noreply@myu.edu
