- Usando docker para CURL e UNZIP - Iniciando angular com profile de produção

--- a/dockerfiles/Dockerfile_frontend
+++ b/dockerfiles/Dockerfile_frontend
@@ -18,5 +18,5 @@ RUN yarn install --network-timeout 300000
 # Listen / accept connections from all IP addresses.
 # NOTE: At this time it is only possible to run Docker container in Production mode
 # if you have a public IP. See https://github.com/DSpace/dspace-angular/issues/1485
-CMD yarn serve:ssr --host 0.0.0.0
+CMD yarn serve --host 0.0.0.0
 
