--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -1,19 +1,26 @@
+# Informe o diretório de instalação do DSpace antigo
 DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita4_2
 
 ####
 ## Configurações do Backend
 ####
 BACKEND_PROTOCOL=http
-# Atenção a aplicação rodando no browser precisa conseguir acessar este endereço
+# Atenção: a aplicação, no browser, deve acessar este endereço
 BACKEND_HOSTNAME=192.169.5.126
 BACKEND_PORT=8080
 BACKEND_USES_SSL=false
+
 
 ####
 ## Configurações do FrontEnd
 ####
 FRONTEND_PROTOCOL=http
+
+# Atenção: este porta precisa ser acessível pelo browser
 FRONTEND_HOSTNAME=192.169.5.126
-# Atenção este endereço precisa ser acessível pelo browser
+
+# Atenção: esta porta precisa ser acessível pelo browser
 FRONTEND_PORT=4000
+
+# Indique true caso o seu repositório use https
 FRONTEND_USES_SSL=false
