--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -1,26 +1,38 @@
+############
+## Configurações do Backend (serviços do DSpace)
+############
+
 # Informe o diretório de instalação do DSpace antigo
 DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita4_2
 
-####
-## Configurações do Backend
-####
+# Atenção: preencha as configurações abaixo, levando que em consideração que
+# a aplicação, no browser, deve ter acesso a esses endereços
 BACKEND_PROTOCOL=http
-# Atenção: a aplicação, no browser, deve acessar este endereço
 BACKEND_HOSTNAME=192.169.5.126
 BACKEND_PORT=8080
+# Indique true caso o seu repositório use https
 BACKEND_USES_SSL=false
 
+# (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.5
+# deixe como está, caso não possua um repositório de onde baixar o zip
+BACKEND_ADDRESS_GIT=https://github.com/deposita7-ibict/DSpace.git
 
-####
-## Configurações do FrontEnd
-####
+
+############
+## Configurações do FrontEnd (interface gráfica do DSpace)
+############
+
+# Atenção: preencha as configurações abaixo, levando que em consideração que
+# a aplicação, no browser, deve ter acesso a esses endereços
+
 FRONTEND_PROTOCOL=http
-
-# Atenção: este porta precisa ser acessível pelo browser
 FRONTEND_HOSTNAME=192.169.5.126
-
-# Atenção: esta porta precisa ser acessível pelo browser
 FRONTEND_PORT=4000
 
 # Indique true caso o seu repositório use https
 FRONTEND_USES_SSL=false
+
+# (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.5
+# deixe como está, caso não possua um repositório de onde baixar o zip
+#FRONTEND_ADDRESS_ZIP=https://github.com/DSpace/dspace-angular/archive/refs/tags/dspace-7.5.zip
+FRONTEND_ADDRESS_GIT=https://github.com/deposita7-ibict/dspace-angular.git
