--- a/variaveis-para-atualizacao.properties
+++ b/variaveis-para-atualizacao.properties
@@ -9,13 +9,13 @@ DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/deposita4_2
 # a aplicação, no browser, deve ter acesso a esses endereços
 BACKEND_PROTOCOL=http
 BACKEND_HOSTNAME=192.169.5.126
-BACKEND_PORT=8080
+BACKEND_PORT=9080
 # Indique true caso o seu repositório use https
 BACKEND_USES_SSL=false
 
 # (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.5
 # deixe como está, caso não possua um repositório de onde baixar o zip
-BACKEND_ADDRESS_GIT=https://github.com/deposita7-ibict/DSpace.git
+BACKEND_ADDRESS_GIT=
 
 
 ############
@@ -27,7 +27,7 @@ BACKEND_ADDRESS_GIT=https://github.com/deposita7-ibict/DSpace.git
 
 FRONTEND_PROTOCOL=http
 FRONTEND_HOSTNAME=192.169.5.126
-FRONTEND_PORT=4000
+FRONTEND_PORT=5000
 
 # Indique true caso o seu repositório use https
 FRONTEND_USES_SSL=false
@@ -35,4 +35,4 @@ FRONTEND_USES_SSL=false
 # (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.5
 # deixe como está, caso não possua um repositório de onde baixar o zip
 #FRONTEND_ADDRESS_ZIP=https://github.com/DSpace/dspace-angular/archive/refs/tags/dspace-7.5.zip
-FRONTEND_ADDRESS_GIT=https://github.com/deposita7-ibict/dspace-angular.git
+FRONTEND_ADDRESS_GIT=
