--- a/dockerfiles/Dockerfile_backend
+++ b/dockerfiles/Dockerfile_backend
@@ -20,9 +20,9 @@ USER dspace
 ADD --chown=dspace . /app/
 # Build DSpace (note: this build doesn't include the optional, deprecated "dspace-rest" webapp)
 # Copy the dspace-installer directory to /install.  Clean up the build to keep the docker image small
-RUN mvn --no-transfer-progress package && \
+RUN mvn -q --no-transfer-progress package && \
   mv /app/dspace/target/${TARGET_DIR}/* /install && \
-  mvn clean
+  mvn clean -q
 
 # Step 2 - Run Ant Deploy
 FROM openjdk:${JDK_VERSION}-slim as ant_build
@@ -48,6 +48,8 @@ RUN ant init_installation update_configs update_code update_webapps
 # Step 3 - Run tomcat
 # Create a new tomcat image that does not retain the the build directory contents
 FROM tomcat:9-jdk${JDK_VERSION}
+ENV TZ="America/Sao_Paulo"
+
 # NOTE: DSPACE_INSTALL must align with the "dspace.dir" default configuration.
 ENV DSPACE_INSTALL=/dspace-tmp
 # Copy the /dspace directory from 'ant_build' containger to /dspace in this container
