--- a/dockerfiles/docker-compose_migration.yml
+++ b/dockerfiles/docker-compose_migration.yml
@@ -79,7 +79,7 @@ services:
     working_dir: /var/solr/data
     volumes:
     # Mount our local Solr core configs so that they are available as Solr configsets on container
-    - ../../dspace-install-dir/solr/statistics:/opt/solr/server/solr/configsets/
+#    - ../../dspace-install-dir/solr/statistics:/opt/solr/server/solr/configsets/
     # Keep Solr data directory between reboots
     - solr_data:/var/solr/data
     # Initialize all DSpace Solr cores using the mounted local configsets (see above), then start Solr
@@ -97,6 +97,8 @@ services:
       cp -r -u /opt/solr/server/solr/configsets/oai/* oai
       precreate-core search /opt/solr/server/solr/configsets/search
       cp -r -u /opt/solr/server/solr/configsets/search/* search
+      precreate-core statistics /opt/solr/server/solr/configsets/statistics
+      cp -r -u /opt/solr/server/solr/configsets/statistics/* statistics
       exec solr -f
 volumes:
   solr_data:
