--- a/dockerfiles/Dockerfile_backend
+++ b/dockerfiles/Dockerfile_backend
@@ -58,6 +58,7 @@ COPY --from=ant_build /dspace $DSPACE_INSTALL
 EXPOSE 8080 8009
 # Give java extra memory (2GB)
 ENV JAVA_OPTS=-Xmx2000m
+RUN chmod -R 777 ${DSPACE_INSTALL}
 
 # Link the DSpace 'server' webapp into Tomcat's webapps directory.
 # This ensures that when we start Tomcat, it runs from /server path (e.g. http://localhost:8080/server/)
