--- a/dockerfiles/docker-compose_migration.yml
+++ b/dockerfiles/docker-compose_migration.yml
@@ -58,6 +58,7 @@ services:
         mv /dspace/config/submission-forms.xml.migrated /dspace/config/submission-forms.xml
         sed -i 's/<step id="collection"\/>//g' /dspace/config/item-submission.xml
         ln -s /dspace/webapps/server /usr/local/tomcat/webapps/
+        ln -s /dspace/webapps/oai /usr/local/tomcat/webapps/
         catalina.sh run
 
   # DSpace Solr container
