- Adição da capacidade de instalação de novo DSpace

--- a/dockerfiles/docker-compose_restart.yml
+++ b/dockerfiles/docker-compose_restart.yml
@@ -47,6 +47,8 @@ services:
       - /bin/bash
       - '-c'
       - |
+        /dspace/bin/dspace database migrate ignored
+        ln -s /dspace/webapps/server /usr/local/tomcat/webapps/ || true
         catalina.sh run
 
   # DSpace Solr container
