--- a/dockerfiles/docker/postgres/Dockerfile
+++ b/dockerfiles/docker/postgres/Dockerfile
@@ -2,7 +2,7 @@ FROM postgres:12
 LABEL maintainer="Márcio Gurgel <marcio.rga@gmail.com>"
 
 EXPOSE 5432
-COPY dump.sql /opt/
+COPY *.sql /opt/
 
 RUN echo "Iniciando a construção"
 COPY ./scripts/prepara-postgres.sh /docker-entrypoint-initdb.d/
