- Atualização de instruções

--- a/ibict_upgrade-variables.properties
+++ b/ibict_upgrade-variables.properties
@@ -6,6 +6,7 @@
 BACKEND_PROTOCOL=http
 
 # Informe o endereço onde o serviço (backend) do DSpace irá rodar
+# Importante, este endereço precisa ser acessível pela interface gráfica.
 BACKEND_HOSTNAME=192.169.5.126
 
 # Informe a porta onde o serviço (backend) do DSpace irá rodar
@@ -22,6 +23,7 @@ BACKEND_USES_SSL=false
 FRONTEND_PROTOCOL=http
 
 # Informe o endereço da interface web
+# Importante: este será o endereço que o usuário irá utilizar para acessar o DSpace
 FRONTEND_HOSTNAME=192.169.5.126
 
 # Informe a porta da interface web
