Atualização para DSpace 7.6

--- a/_default_instalation_variables.properties
+++ b/_default_instalation_variables.properties
@@ -2,5 +2,5 @@
 #########################
 ### Variáveis fixas (não é necessário modificar)
 #########################
-FRONTEND_ADDRESS_GIT=https://github.com/projetos-codic-ibict/dspace-padrao-angular.git
+FRONTEND_ADDRESS_GIT=
 DSPACE_INSTALL_DIR=./default-ibict
