Customização do nome do repositório

--- a/ibict_upgrade-variables.properties
+++ b/ibict_upgrade-variables.properties
@@ -1,4 +1,11 @@
 ############
+## Nome e descrição do repositório, modifique para o nome do seu repositório
+##
+############
+REPOSITORY_NAME="Repositório padrão IBICT"
+REPOSITORY_DESCRIPTION="Repositório-Padrão para DSpace 7 do IBICT"
+
+############
 ## Configurações do Backend (serviços do DSpace)
 ############
 
