Correção de encoding.

--- a/_default_instalation_variables.properties
+++ b/_default_instalation_variables.properties
@@ -1,6 +1,6 @@
 
 #########################
-### Variï¿½veis fixas (nï¿½o ï¿½ necessï¿½rio modificar)
+### Variáveis fixas (não é necessário modificar)
 #########################
 FRONTEND_ADDRESS_GIT=https://github.com/projetos-codic-ibict/dspace7-padrao-angular.git
 DSPACE_INSTALL_DIR=./default-ibict
