--- a/upgrade-variables.properties
+++ b/upgrade-variables.properties
@@ -1,38 +1,46 @@
 ############
-## Configurações do Backend (serviços do DSpace)
+## PT_BR: Configurações do Backend (serviços do DSpace)
+## EN: Back end Configuration (dspace services)
 ############
 
-# Informe o diretório de instalação do DSpace antigo
-DSPACE_INSTALL_DIR=/home/mrgurgel/dspace-install/ridi-install-dir
+#################
+# PT_BR:    Informe o diretório de instalação do DSpace antigo (não iremos modifia-lo)
+#           Exemplo: /home/your_user/dspace-4-install-dir
+# EN:       Inform the root directory of the old DSpace (we will not change it)
+#           Example: /home/your_user/dspace-4-install-dir
+DSPACE_INSTALL_DIR=
 
-# Atenção: preencha as configurações abaixo, levando que em consideração que
-# a aplicação, no browser, deve ter acesso a esses endereços
-BACKEND_PROTOCOL=http
-BACKEND_HOSTNAME=192.169.5.126
-BACKEND_PORT=9080
-# Indique true caso o seu repositório use https
-BACKEND_USES_SSL=false
 
-# (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.6
-# deixe como está, caso não possua um repositório de onde baixar o zip
+#################
+# PT_BR: Abaixo, informe os endereços válidos (acessíveis) do backend.
+# EN: Bellow, fill the address of the dspace's back-end. Important: this address must be valid to be accessed via browser
+# Example: http
+BACKEND_PROTOCOL=
+# Example: 192.169.5.133
+BACKEND_HOSTNAME=
+# Example: 9080
+BACKEND_PORT=
+# Example: false
+BACKEND_USES_SSL=
+# PT_BR: Campo não obrigatório. Caso você já tenha um backend do DSpace 7 no git, informe abaixo. Caso contrário, o backend será baixado do repositório oficial do DSpace.
+# EN: Not required. If you have a public git repository of your DSpace 7, inform bellow. Otherwise, the backend will be download from the official DSpace Github's repository.
 BACKEND_ADDRESS_GIT=
 
-
 ############
-## Configurações do FrontEnd (interface gráfica do DSpace)
+## PT_BR: Configurações do Front-end (Interface gráfica do DSpace)
+## EN: Front-end configuration (DSpace's interface)
 ############
 
-# Atenção: preencha as configurações abaixo, levando que em consideração que
-# a aplicação, no browser, deve ter acesso a esses endereços
+#################
+# PT_BR: Abaixo, informe os endereços válidos (acessíveis) do backend.
+# EN: Bellow, fill the address of the dspace's back-end. Important: this address must be valid to be accessed via browser
+# Example: http
+FRONTEND_PROTOCOL=
+# Example: 192.169.5.133
+FRONTEND_HOSTNAME=
+# Example: 5000
+FRONTEND_PORT=
 
-FRONTEND_PROTOCOL=http
-FRONTEND_HOSTNAME=192.169.5.126
-FRONTEND_PORT=5000
-
-# Indique true caso o seu repositório use https
-FRONTEND_USES_SSL=false
-
-# (não obrigatório) Caso possua, um endereço onde baixar o zip DSpace 7.6
-# deixe como está, caso não possua um repositório de onde baixar o zip
-#FRONTEND_ADDRESS_ZIP=https://github.com/DSpace/dspace-angular/archive/refs/tags/dspace-7.6.zip
+# PT_BR: Campo não obrigatório. Caso você já tenha um front-end do DSpace 7 no git, informe abaixo. Caso contrário, o backend será baixado do repositório oficial do DSpace.
+# EN: Not required. If you have a public git repository of your Angular DSpace 7, inform bellow. Otherwise, the frontend will be download from the official DSpace Github's repository.
 FRONTEND_ADDRESS_GIT=
