--- a/dockerfiles/docker-compose_migration.yml
+++ b/dockerfiles/docker-compose_migration.yml
@@ -1,6 +1,3 @@
-version: '3.7'
-
-
 services:
 
   dspace7db:
@@ -16,7 +13,7 @@ services:
       - POSTGRES_PASSWORD=xxxxx #Postgres password
       - TZ=America/Sao_Paulo
     networks:
-      - dspacenet
+      - dspacenetwork
     volumes:
       -  postgres_data:/var/lib/postgresql/data
 
@@ -31,7 +28,7 @@ services:
       context: .
       dockerfile: Dockerfile
     networks:
-      - dspacenet
+      - dspacenetwork
     ports:
       - published: 8080 #Port for tomcat
         target: 8080
@@ -66,7 +63,7 @@ services:
     # Uses official Solr image at https://hub.docker.com/_/solr/
     image: solr:8.11-slim
     networks:
-      dspacenet:
+      dspacenetwork:
     ports:
       - "127.0.0.1:8983:8983"
     stdin_open: true
@@ -106,6 +103,6 @@ volumes:
 
 
 networks:
-  dspacenet:
-    name: dspacenet
+  dspacenetwork:
+    name: dspacenetwork
     driver: bridge
