--- a/dockerfiles/docker-compose_restart.yml
+++ b/dockerfiles/docker-compose_restart.yml
@@ -16,7 +16,7 @@ services:
       - POSTGRES_PASSWORD=xxxxx #Postgres password
       - TZ=America/Sao_Paulo
     networks:
-      - dspacenet
+      - dspacenetwork
   #    volumes:
   #      -  ../../postgres-data:/var/lib/postgresql/data
 
@@ -31,7 +31,7 @@ services:
       context: .
       dockerfile: Dockerfile
     networks:
-      - dspacenet
+      - dspacenetwork
     ports:
       - published: 8080 #Port for tomcat
         target: 8080
@@ -57,7 +57,7 @@ services:
     # Uses official Solr image at https://hub.docker.com/_/solr/
     image: solr:8.11-slim
     networks:
-      dspacenet:
+      dspacenetwork:
     ports:
       - "127.0.0.1:8983:8983"
     stdin_open: true
@@ -96,6 +96,6 @@ volumes:
 
 
 networks:
-  dspacenet:
-    name: dspacenet
+  dspacenetwork:
+    name: dspacenetwork
     driver: bridge
