--- a/_default_instalation_variables.properties
+++ b/_default_instalation_variables.properties
@@ -1,6 +1,6 @@
 
 #########################
-### Variáveis fixas (não é necessário modificar)
+### Variï¿½veis fixas (nï¿½o ï¿½ necessï¿½rio modificar)
 #########################
-FRONTEND_ADDRESS_GIT=https://github.com/projetos-codic-ibict/dspace7-padrao-angular.git
+FRONTEND_ADDRESS_GIT=https://github.com/projetos-codic-ibict/dspace8-padrao-angular.git
 DSPACE_INSTALL_DIR=./default-ibict
