--- a/dockerfiles/docker-compose_restart.yml
+++ b/dockerfiles/docker-compose_restart.yml
@@ -17,8 +17,8 @@ services:
       - TZ=America/Sao_Paulo
     networks:
       - dspacenetwork
-  #    volumes:
-  #      -  ../../postgres-data:/var/lib/postgresql/data
+    volumes:
+      -  postgres_data:/var/lib/postgresql/data
 
   dspace8:
     container_name: dspace8
@@ -93,6 +93,7 @@ services:
 volumes:
   solr_data:
   m2:
+  postgres_data:
 
 
 networks:
